0.2.4
- Feature: set title attributes for images (#99)
- Fix: a marker prefix "0" gets ignored (#103)

0.2.3
- Feature: conditional set/reme wrapped markers (#76)
- Feature: create IMG tags with maxX/maxY/maxArea (#77)

0.2.2
- Feature: reset all markers (#73)

0.2.1
- Fix: make piVars more secure (#8)

0.2.0
- Fix: there's <tr###CLASS_HEADERROW###> in the list view header (#0003324)

0.1.0
- Initial public release as a separate extension